<resources>
    <string name="str_en" translatable="false">English</string>
    <string name="str_es" translatable="false">Spanish</string>
    <string name="str_pt" translatable="false">Portuguese</string>
    <string-array name="languages">
        <item>@string/str_en</item>
        <item>@string/str_es</item>

    </string-array>
    <string name="app_name">TFG - ChampionshipLeague</string>

    <string name="bienvenida">   Bienvenidos a ChampionShipLeague  </string>
    <string name="clasificacion">Clasificacion</string>
    <string name="liga">Goleadores</string>
    <string name="equipo">Gestion de Equipo</string>
    <string name="resultados">Resultados</string>
    <string name="jornada">Nueva Jornada</string>
    <string name="seleccionJornada">Seleccione Jornada</string>
    <string name="seleccionEquipo">Seleccione Equipo</string>

    <string name="str_buttonIdioma">Cambiar Idioma</string>
    <string name="gestionLiga">Gestion de Liga</string>
    <string name="anyadirEquipo">Nuevo Equipo</string>
    <string name="eliminarEquipo">Eliminar Equipo</string>
    <string name="gestionEquipo">Informacion de Equipo</string>

    <string name="descender">Descender Equipo</string>
    <string name="eliminarJornada">Borrar Jornada</string>

    <string name="anyadir">Agregar</string>
    <string name="eliminar">Eliminar</string>
    <string name="trayectoria">Trayectoria de Equipos</string>

    <string name="action_settings">Creado por JLVR</string>
    <string name="action_settings1">  </string>

    <string name="equipo_crear">Ascender Equipo </string>
    <string name="equipo_eliminar">Descender Equipo </string>
    <string name="button_guardar">Guardar </string>
    <string name="button_cancelar">Cancelar </string>
    <string name="equipo_crear_titulo">Nueva Equipo</string>
    <string name="equipo_crear_confirmacion">Equipo Ascendido de Categoria</string>


    <string name="actualizar">Actualizar</string>
    <string name="ciudad">Ciudad</string>
    <string name="menu_eliminar">Eliminar</string>
    <string name="resultados_crear_confirmacion">Resultados de la jornada anyadidos</string>


    <string name="Ayuda"> Ayuda de uso</string>
    <string name="ayuda1">Seleccione "Gestion de liga"
    para acceder a información de equipos y ascender o descender equipos de categoria</string>
    <string name="ayuda2">Seleccione "Resultados"
    para acceder a información de los resultados de la jornada de cada equipos
     y anyadir nuevos resultados</string>
    <string name="ayuda3">Seleccione "Clasificacion"
    para acceder a información de equipos en la liga</string>
    <string name="ayuda4">Para introducir resultados de nueva jornada
     Introzuca: Equipo Local, goles local, EquipoVistante, goles viditante</string>
    <string name="volver">Atras</string>

    <string name="resultado_eliminar_titulo">Eliminar Jornada</string>
    <string name="resultado_eliminar_mensaje">¿Seguro que desea eliminar la Jornada?</string>
    <string name="resultado_eliminar_confirmacion">Jornada eliminada</string>

    <string name="equipo_eliminar_titulo">Descender Equipo</string>
    <string name="equipo_eliminar_mensaje">¿Seguro que desea descender el equipo de Categoría?</string>
    <string name="equipo_eliminar_confirmacion">Equipo Descendido</string>

    <string name="title_activity_clasificacion">Clasificacion</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_resultados">Resultados</string>
    <string name="title_activity_gestion_liga">Gestion de Liga</string>
    <string name="title_activity_gestion_equipo">Informacion de Equipos</string>
    <string name="title_activity_anyadir_equipo">Anyadir Equipo</string>
    <string name="title_activity_eliminar_equipo">Eliminar Equipo</string>
    <string name="title_activity_nuevos_resutados">Nuevos Resutados</string>
    <string name="title_activity_trayectoria_equipo">Trayectoria Equipo</string>
    <string name="title_activity_clasificacion_formulario">Clasificacion Formulario</string>

    //formulario a modificar
    <string name="label_equipo">Equipo:</string>
    <string name="label_partidos">Partidos Jugados:</string>
    <string name="label_puntos">Puntos:</string>
    <string name="label_ganados">Partidos Ganados:</string>
    <string name="label_empatados">Partidos Empatados:</string>
    <string name="label_perdidos">Partidos Perdidos:</string>
    <string name="label_gFavor">Goles a Favor:</string>
    <string name="label_gContra">Goles en Contra:</string>
    <string name="title_activity_formulario_resultados">FormularioResultados</string>
    <string name="title_activity_resultados_forularios">ResultadosForularios</string>


    //formulario resultados
    <string name="label_jornada">Jornada:</string>
    <string name="label_partido1">Partido 1:</string>
    <string name="label_partido2">Partido 2:</string>
    <string name="label_partido3">Partido 3:</string>
    <string name="label_partido4">Partido 4:</string>
    <string name="label_partido5">Partido 5:</string>
    <string name="jornadas">Seleccione Jornada:</string>


    <string name="infoEquipo">Informacion de Equipos</string>
    <string name="title_activity_equipos">Equipos</string>
    <string name="title_activity_equipos_formularios">EquiposFormularios</string>

    <string name="titulares">Jugadores Titulares</string>
    <string name="suplentes">Jugadores Suplentes</string>
    <string name="title_activity_ayuda">Ayuda</string>
    <string name="title_activity_login">Login</string>


    //LOGIN
    <string name="sign_out">Desconectar</string>
    <string name="desconectar">desconectar</string>
    <string name="login">Login</string>
    <string name="title_activity_prueba">Prueba</string>
    <string name="title_activity_prueba_firebase">PruebaFirebase</string>


    <string name="buttonOrdenar">Ordenar</string>
    <string name="anyadirRes"> Añadir </string>
    <string name="title_activity_lateral">Lateral</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_navigation">Navigation</string>


    <string name="NuevaLiga"> Añadir Nueva Liga </string>
    <string name="NuevoPartido"> Añadir Nueva Partido </string>
    <string name="NuevaFecha"> Añadir Fecha de Partido </string>
    <string name="NombreNuevaLiga">Introduzca Nombre de Liga</string>
    <string name="equipoLocal">Nombre Equipo Local</string>
    <string name="equipoVist">Nombre Equipo Vist</string>
    <string name="resltadoP">Marcador</string>
    <string name="ButtonNuevaL">Guardar</string>

    <string name="ButtonNuevoG">Añadir Goleadores</string>
    <string name="goleadores">Nuevos Goleadores</string>
    <string name="nombreJG">Nombre Jugador</string>
    <string name="GolesMArcados">Goles en el partido</string>
    <string name="title_activity_navegacion_lateral">NavegacionLateral</string>
</resources>
