<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_green_dark">




        <LinearLayout
        android:id="@+id/LytContenedorSaludo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/holo_green_dark"
        android:weightSum="1">


        <TextView android:text="@string/Ayuda" android:layout_width="310dp"
            android:layout_height="144dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:textColor="#ffffffff"
            android:autoText="false"
            android:id="@+id/txtEquipos"
            android:textSize="40dp" />

        <TextView
        android:id="@+id/ayuda1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ayuda1"
        android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <TextView
            android:id="@+id/ayuda2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ayuda2"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />


        <TextView
            android:id="@+id/ayuda4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ayuda4"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <TextView
            android:id="@+id/ayuda3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ayuda3"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />






        <Button android:id="@+id/boton1"
            android:layout_width="137dp"
            android:layout_height="wrap_content"
            android:text="@string/volver"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:textColor="#ffffffff"
            android:background="#942b2b2b" />


    </LinearLayout>


</ScrollView>
