<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.jlvr.juanluis.tfg_championshipleague.MenuLateral">

    <android.support.design.widget.NavigationView
        android:id="@+id/navview"
        android:layout_width="wrap_content"
        android:layout_height="495dp"
        android:fitsSystemWindows="true"
        android:layout_gravity="start"
        app:headerLayout="@layout/activity_navegacion_lateral"
        app:menu="@menu/menulateral"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="0dp"/>



    <ScrollView
        android:layout_width="match_parent"
        android:background="@android:color/holo_green_dark"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/LytContenedorSaludo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_dark"
            android:orientation="vertical"
            android:weightSum="1"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <Button
                android:id="@+id/buttonIdioma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/str_buttonIdioma"/>


            <TextView
                android:id="@+id/bienvenida"
                android:layout_width="310dp"
                android:layout_height="100dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="50dp"
                android:layout_weight="0.5"
                android:autoText="false"
                android:text="@string/bienvenida"
                android:textColor="#ffffffff"
                android:textSize="30dp"/>
            /////////////////Login

            <LinearLayout
                android:id="@+id/lytBotones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/sign_in_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/sign_out_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_out"/>


            </LinearLayout>

            <TextView
                android:id="@+id/txtNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/lytBotones"/>

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtNombre"/>

            //////////////////////////////////////////////////////////////

            <Button
                android:id="@+id/boton0"
                android:layout_width="137dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="#942b2b2b"
                android:text="@string/title_activity_prueba_firebase"
                android:textColor="#ffffffff"
                />
            <Button
                android:id="@+id/boton9"
                android:layout_width="137dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="#942b2b2b"
                android:text="@string/title_activity_prueba_firebase"
                android:textColor="#ffffffff"
                />


            <Button
                android:id="@+id/boton1"
                android:layout_width="137dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="#942b2b2b"
                android:text="@string/clasificacion"
                android:textColor="#ffffffff"
                android:visibility="gone"/>

            //


            //

            <Button
                android:id="@+id/boton2"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="#942b2b2b"
                android:text="@string/resultados"
                android:textColor="#ffffffff"
                android:visibility="gone"/>

            <Button
                android:id="@+id/boton3"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="#942b2b2b"
                android:text="@string/liga"
                android:textColor="#ffffffff"
                android:visibility="gone"/>

            <Button
                android:id="@+id/botonayuda"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="#942b2b2b"
                android:text="@string/Ayuda"
                android:textColor="#ffffffff"
                android:visibility="gone"/>


        </LinearLayout>
    </ScrollView>

</android.support.v4.widget.DrawerLayout>