<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jlvr.juanluis.tfg_championshipleague.ResultadosFireBase.resultadosFB"
    android:background="@android:color/holo_green_dark"   >



    <LinearLayout
        android:id="@+id/lista"
        android:layout_width="356dp"
        android:layout_height="337dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="14dp"
        tools:layout_editor_absoluteY="26dp"
        android:weightSum="1">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/lstResultados"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="-141dp"
            />
    </LinearLayout>



    <LinearLayout
        android:id="@+id/botones"
        android:layout_width="374dp"
        android:layout_height="66dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-6dp"
        tools:layout_editor_absoluteY="387dp"
       >

        <LinearLayout
            android:id="@+id/texto"
            android:layout_width="103dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="150dp"
            tools:layout_editor_absoluteY="16dp"
            android:layout_below="@id/lista">

            <TextView
                android:id="@+id/textView"
                android:layout_width="320dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:text="@string/resultados"
                android:textColor="@android:color/holo_red_dark"
                tools:layout_editor_absoluteX="37dp"
                tools:layout_editor_absoluteY="7dp"/>
        </LinearLayout>

        <Button
            android:id="@+id/buttonOrdenar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:elevation="24dp"
            android:text="@string/buttonOrdenar"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="404dp"/>

        <Button
            android:id="@+id/buttonAnyadi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/anyadirRes"
            tools:ignore="MissingConstraints"
            />

        <Button
            android:id="@+id/buttonEliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/eliminar"
            tools:ignore="MissingConstraints"
            />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
